# vuer_mjcf

./: .gitattributes  .gitattributes.bak  README.md  generate_screenshots.py  pyproject.toml  refactor_tasks.py
assets/45_robot_room/: 7_24_2025.mtl
docs/: conf.py  index.md
docs/api/: base.md  schema.md
vuer_examples/: README.md  __init__.py  viewer.py
vuer_examples/mug_tree_export/: mug_tree.mjcf.xml
vuer_examples/pick_place_export/: pick_place.mjcf.xml
vuer_examples/scenes/: __init__.py  kitchen_room.py  microwave_muffin.py  mug_tree.py  mug_tree_ur.py  pour_liquid.py  push_t.py  shadow_hands_kitchen.py  simple_pick_place.py  tie_knot.py
vuer_examples/shadow_hands_kitchen_export/: shadow_hands_kitchen.mjcf.xml
vuer_mjcf/basic_components/: force_plate.py
vuer_mjcf/objects/: granite_countertop.py  mj_sdf.py
vuer_mjcf/robots/: astribot.py  dexhand.py  franka_panda.py  g1.py  lift.py  mpl_hand.py  r5a.py  robotiq_2f85.py  shadow_hand.py  tomika_gripper.py  trossen_widow_x_arm.py  x5a.py  x7.py  x7s.py  xhand.py
vuer_mjcf/schema/: base.py  schema.py
vuer_mjcf/stage_sets/: _floating_ability_hand.py  _floating_dexhand.py  _floating_mpl_hand.py  _floating_robotiq.py  _floating_shadowhand.py  _floating_tomika_gripper.py  _floating_ufactory_gripper.py  _floating_xhand.py  _moving_cylinder.py  astribot_robotiq.py  astribot_scene.py  astribot_shadow_hand.py  dual_panda.py  g1_scene.py  kitchen_room.py  lift_scene.py  menagerie.py  panda_robotiq_scene.py  panda_shadow_hand_scene.py  panda_tomika_scene.py  r5a_scene.py  room_1.py  single_widow_x_arm.py  trossen_table.py  ufactory_xarm7_scene.py  ur5e_robotiq_scene.py  ur5e_shadow_hand_scene.py  x5a_scene.py  x7_scene.py  x7s_scene.py  xhand_scene.py
vuer_mjcf/tasks/: ball_sorting_toy.py  ball_sorting_toy_calibrated.py  ball_sorting_toy_new.py  ball_sorting_toy_new_astribot.py  (+61 more)
(+176 files in other folders)
