[project]
name = "vuer_mjcf"
version = "0.1.0"
description = "vuer MuJoCo Environments for Lucid-XR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "dm-control",
    "lxml",
    "scipy",
    "vuer[all]>=0.0.68",
    "pytest>=8.3.5",
    "mink>=0.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vuer_mjcf"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["vuer_mjcf/__tests__", "vuer_mjcf/tasks/__tests__", "vuer_mjcf/utils/__tests__"]
python_files = ["test_*.py"]
